# NASA-ADS-metadata-retriever

./: .env.example  .gitignore  CONTRIBUTING.md  NASAads_paperlist_complete_parallel.py  README.md  nasa_ads.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_search.py  pagination_batch.py
nasa_ads/: __init__.py  cli.py  constants.py
nasa_ads/config/: __init__.py  config_loader.py
nasa_ads/core/: __init__.py  api_client.py
nasa_ads/formatters/: __init__.py  output_formatter.py
nasa_ads/models/: __init__.py  paper.py
nasa_ads/utils/: __init__.py  logger.py  validators.py
tests/: test_api_client.py  test_config.py  test_formatters.py  test_models.py  test_validators.py
